--- a/docs/api/langchain.ipynb
+++ b/docs/api/langchain.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "b6feab62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain import OpenAI, ConversationChain\n",
+    "from langchain import ConversationChain\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.callbacks import get_openai_callback\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.chains import LLMChain\n",
     "from langchain.agents import load_tools\n",
@@ -16,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "8830fdd4",
    "metadata": {},
    "outputs": [],
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "0ee97ac4",
    "metadata": {},
    "outputs": [
@@ -36,7 +38,7 @@
      "text": [
       "\n",
       "\n",
-      "FunkyFeet Socks\n"
+      "Happy Feet Co.\n"
      ]
     }
    ],
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "c73f6fd4",
    "metadata": {},
    "outputs": [],
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "244ed4cf",
    "metadata": {},
    "outputs": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "d79d1f3e",
    "metadata": {},
    "outputs": [],
@@ -88,17 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "ef13560e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n\\nKnickers & Knee-highs'"
+       "'\\n\\nCheery Socks.'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
+   "id": "e78d870f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = OpenAI(temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "9098486b",
    "metadata": {},
    "outputs": [],
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "bd33d8d9",
    "metadata": {},
    "outputs": [],
@@ -131,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "2f228773",
    "metadata": {},
    "outputs": [
@@ -142,40 +154,37 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m Olivia Wilde is an actor, media searches might give me the answer.\n",
-      "Though: I need to use the Calculator to solve the math equation.\n",
+      "\u001b[32;1m\u001b[1;3m I need to find out who Olivia Wilde's boyfriend is and then calculate his age raised to the 0.23 power.\n",
       "Action: Search\n",
       "Action Input: \"Olivia Wilde boyfriend\"\u001b[0m\n",
       "Observation: \u001b[36;1m\u001b[1;3mJason Sudeikis\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3m Now to use the Calculator to solve the equation\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I need to find out Jason Sudeikis' age\n",
+      "Action: Search\n",
+      "Action Input: \"Jason Sudeikis age\"\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m47 years\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I need to calculate 47 raised to the 0.23 power\n",
       "Action: Calculator\n",
-      "Action Input: raised to the 0.23 power\u001b[0m\n",
-      "Observation: \u001b[33;1m\u001b[1;3mAnswer: 1\u001b[0m\n",
+      "Action Input: 47^0.23\u001b[0m\n",
+      "Observation: \u001b[33;1m\u001b[1;3mAnswer: 2.4242784855673896\n",
+      "\u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
-      "Final Answer: Jason Sudeikis is Olivia Wilde's boyfriend and his current age raised to the 0.23 power is 1.\u001b[0m\n",
+      "Final Answer: Jason Sudeikis, Olivia Wilde's boyfriend, is 47 years old and his age raised to the 0.23 power is 2.4242784855673896.\u001b[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "1465\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"Jason Sudeikis is Olivia Wilde's boyfriend and his current age raised to the 0.23 power is 1.\""
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Now let's test it out!\n",
-    "agent.run(\"Who is Olivia Wilde's boyfriend? What is his current age raised to the 0.23 power?\")"
+    "with get_openai_callback() as cb:\n",
+    "    response = agent.run(\"Who is Olivia Wilde's boyfriend? What is his current age raised to the 0.23 power?\")\n",
+    "    print(cb.total_tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "c315617a",
    "metadata": {},
    "outputs": [],
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "3253b3ab",
    "metadata": {},
    "outputs": [
@@ -210,10 +219,10 @@
     {
      "data": {
       "text/plain": [
-       "' The male lead in Minority Report is Tom Cruise. He plays the role of Chief John Anderton, the head of a special police unit called the Precrime Division.'"
+       "' The male lead in Minority Report is Tom Cruise. He plays the role of Chief John Anderton, a Washington D.C. police officer who is accused of a future crime he has yet to commit.'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "8ec8b260",
    "metadata": {},
    "outputs": [
@@ -241,7 +250,7 @@
       "Current conversation:\n",
       "\n",
       "Human: Who is the male lead in Minority Report?\n",
-      "AI:  The male lead in Minority Report is Tom Cruise. He plays the role of Chief John Anderton, the head of a special police unit called the Precrime Division.\n",
+      "AI:  The male lead in Minority Report is Tom Cruise. He plays the role of Chief John Anderton, a Washington D.C. police officer who is accused of a future crime he has yet to commit.\n",
       "Human: When was he born?\n",
       "AI:\u001b[0m\n",
       "\n",
@@ -251,16 +260,76 @@
     {
      "data": {
       "text/plain": [
-       "' Tom Cruise was born on July 3, 1962.'"
+       "' Tom Cruise was born on July 3, 1962 in Syracuse, New York.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "conversation.predict(input=\"When was he born?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "af0682fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.llms import Cohere\n",
+    "template = \"\"\"Question: {question}\n",
+    "\n",
+    "Answer: Let's think step by step.\"\"\"\n",
+    "\n",
+    "prompt = PromptTemplate(template=template, input_variables=[\"question\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2f8dbdcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for Cohere\n__root__\n  Could not import cohere python package. Please it install it with `pip install cohere`. (type=value_error)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m llm \u001b[38;5;241m=\u001b[39m \u001b[43mCohere\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Developer/promptxai/env/lib/python3.10/site-packages/pydantic/main.py:342\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValidationError\u001b[0m: 1 validation error for Cohere\n__root__\n  Could not import cohere python package. Please it install it with `pip install cohere`. (type=value_error)"
+     ]
+    }
+   ],
+   "source": [
+    "llm = Cohere()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88d9c971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_chain = LLMChain(prompt=prompt, llm=llm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f283a480",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"What NFL team won the Super Bowl in the year Justin Beiber was born?\"\n",
+    "\n",
+    "llm_chain.run(question)"
    ]
   }
  ],
@@ -280,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
