--- a/docs/api/langchain.ipynb
+++ b/docs/api/langchain.ipynb
@@ -2,117 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b6feab62",
+   "execution_count": 1,
+   "id": "7ba2665f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain import ConversationChain\n",
-    "from langchain.llms import OpenAI\n",
-    "from langchain.callbacks import get_openai_callback\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.chains import LLMChain\n",
     "from langchain.agents import load_tools\n",
-    "from langchain.agents import initialize_agent"
+    "from langchain.agents import initialize_agent\n",
+    "from langchain.llms import OpenAI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "8830fdd4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llm = OpenAI(temperature=0.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "0ee97ac4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Happy Feet Co.\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = \"What would be a good company name a company that makes colorful socks?\"\n",
-    "print(llm(text))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "c73f6fd4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt = PromptTemplate(\n",
-    "    input_variables=[\"product\"],\n",
-    "    template=\"What is a good name for a company that makes {product}?\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "244ed4cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is a good name for a company that makes colorful socks?\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(prompt.format(product=\"colorful socks\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "d79d1f3e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chain = LLMChain(llm=llm, prompt=prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "ef13560e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n\\nCheery Socks.'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain.run(\"colorful socks\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "e78d870f",
+   "execution_count": 2,
+   "id": "1c2539d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,30 +24,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "9098486b",
+   "execution_count": 3,
+   "id": "ae824ffa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Next, let's load some tools to use. Note that the `llm-math` tool uses an LLM, so we need to pass that in.\n",
     "tools = load_tools([\"serpapi\", \"llm-math\"], llm=llm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "bd33d8d9",
+   "execution_count": 4,
+   "id": "4ada29b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finally, let's initialize an agent with the tools, the language model, and the type of agent we want to use.\n",
     "agent = initialize_agent(tools, llm, agent=\"zero-shot-react-description\", verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "2f228773",
+   "execution_count": 5,
+   "id": "0965d0bb",
    "metadata": {},
    "outputs": [
     {
@@ -154,48 +55,44 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m I need to find out who Olivia Wilde's boyfriend is and then calculate his age raised to the 0.23 power.\n",
+      "\u001b[32;1m\u001b[1;3m I need to find out who Leo DiCaprio's girlfriend is and then calculate her age raised to the 0.43 power.\n",
       "Action: Search\n",
-      "Action Input: \"Olivia Wilde boyfriend\"\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3mJason Sudeikis\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3m I need to find out Jason Sudeikis' age\n",
+      "Action Input: \"Leo DiCaprio girlfriend\"\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3mLeonardo DiCaprio seemed to prove a long-held theory about his love life right after splitting from girlfriend Camila Morrone just months ...\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I need to find out Camila Morrone's age\n",
       "Action: Search\n",
-      "Action Input: \"Jason Sudeikis age\"\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m47 years\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3m I need to calculate 47 raised to the 0.23 power\n",
+      "Action Input: \"Camila Morrone age\"\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m25 years\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I need to calculate 25 raised to the 0.43 power\n",
       "Action: Calculator\n",
-      "Action Input: 47^0.23\u001b[0m\n",
-      "Observation: \u001b[33;1m\u001b[1;3mAnswer: 2.4242784855673896\n",
+      "Action Input: 25^0.43\u001b[0m\n",
+      "Observation: \u001b[33;1m\u001b[1;3mAnswer: 3.991298452658078\n",
       "\u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
-      "Final Answer: Jason Sudeikis, Olivia Wilde's boyfriend, is 47 years old and his age raised to the 0.23 power is 2.4242784855673896.\u001b[0m\n",
+      "Final Answer: Camila Morrone is Leo DiCaprio's girlfriend and her current age raised to the 0.43 power is 3.991298452658078.\u001b[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
-      "1465\n"
+      "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"Camila Morrone is Leo DiCaprio's girlfriend and her current age raised to the 0.43 power is 3.991298452658078.\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Now let's test it out!\n",
-    "with get_openai_callback() as cb:\n",
-    "    response = agent.run(\"Who is Olivia Wilde's boyfriend? What is his current age raised to the 0.23 power?\")\n",
-    "    print(cb.total_tokens)"
+    "agent.run(\"Who is Leo DiCaprio's girlfriend? What is her current age raised to the 0.43 power?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "c315617a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conversation = ConversationChain(llm=llm, verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "3253b3ab",
+   "execution_count": 7,
+   "id": "8c801218",
    "metadata": {},
    "outputs": [
     {
@@ -204,55 +101,17 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mThe following is a friendly conversation between a human and an AI. The AI is talkative and provides lots of specific details from its context. If the AI does not know the answer to a question, it truthfully says it does not know.\n",
-      "\n",
-      "Current conversation:\n",
-      "\n",
-      "Human: Who is the male lead in Minority Report?\n",
-      "AI:\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "' The male lead in Minority Report is Tom Cruise. He plays the role of Chief John Anderton, a Washington D.C. police officer who is accused of a future crime he has yet to commit.'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conversation.predict(input=\"Who is the male lead in Minority Report?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "8ec8b260",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mThe following is a friendly conversation between a human and an AI. The AI is talkative and provides lots of specific details from its context. If the AI does not know the answer to a question, it truthfully says it does not know.\n",
-      "\n",
-      "Current conversation:\n",
-      "\n",
-      "Human: Who is the male lead in Minority Report?\n",
-      "AI:  The male lead in Minority Report is Tom Cruise. He plays the role of Chief John Anderton, a Washington D.C. police officer who is accused of a future crime he has yet to commit.\n",
-      "Human: When was he born?\n",
-      "AI:\u001b[0m\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m I need to research Moore's Law and the size of popular large language models\n",
+      "Action: Search\n",
+      "Action Input: \"Moore's Law\" and \"Large Language Models\"\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3mLarge language model size has been increasing 10x every year for the last few years. This is starting to look like another Moore's Law.\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I need to research the compute required to train these models\n",
+      "Action: Search\n",
+      "Action Input: \"Compute required to train large language models\"\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3mNew research from DeepMind attempts to investigate the optimal model size and the number of tokens for training a transformer language model ...\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
+      "Final Answer: Moore's Law applies to large language models in that their size has been increasing 10x every year for the last few years. The compute required to train these models is also increasing, with new research from DeepMind attempting to investigate the optimal model size and the number of tokens for training a transformer language model.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -260,76 +119,19 @@
     {
      "data": {
       "text/plain": [
-       "' Tom Cruise was born on July 3, 1962 in Syracuse, New York.'"
+       "\"Moore's Law applies to large language models in that their size has been increasing 10x every year for the last few years. The compute required to train these models is also increasing, with new research from DeepMind attempting to investigate the optimal model size and the number of tokens for training a transformer language model.\""
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conversation.predict(input=\"When was he born?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "af0682fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.llms import Cohere\n",
-    "template = \"\"\"Question: {question}\n",
-    "\n",
-    "Answer: Let's think step by step.\"\"\"\n",
-    "\n",
-    "prompt = PromptTemplate(template=template, input_variables=[\"question\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "2f8dbdcc",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValidationError",
-     "evalue": "1 validation error for Cohere\n__root__\n  Could not import cohere python package. Please it install it with `pip install cohere`. (type=value_error)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m llm \u001b[38;5;241m=\u001b[39m \u001b[43mCohere\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Developer/promptxai/env/lib/python3.10/site-packages/pydantic/main.py:342\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValidationError\u001b[0m: 1 validation error for Cohere\n__root__\n  Could not import cohere python package. Please it install it with `pip install cohere`. (type=value_error)"
-     ]
-    }
-   ],
-   "source": [
-    "llm = Cohere()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88d9c971",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llm_chain = LLMChain(prompt=prompt, llm=llm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f283a480",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "question = \"What NFL team won the Super Bowl in the year Justin Beiber was born?\"\n",
-    "\n",
-    "llm_chain.run(question)"
+    "agent.run(\"\"\"What is Moore's Law?\n",
+    "How does it apply to Large Language Models?\n",
+    "Illustrate with size of popular large language models, when they were released, \n",
+    "and compute required to train these.\"\"\")"
    ]
   }
  ],
