--- a/docs/api/openai_prompt_automation.ipynb
+++ b/docs/api/openai_prompt_automation.ipynb
@@ -27,8 +27,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "cf5b235e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Name | Parameters | Training Data | Release Date | License | Link to Publisher |\n",
+      "| --- | --- | --- | --- | --- | --- |\n",
+      "| GPT-3 | 175 billion | Common Crawl, BooksCorpus, WebText | June 2020 | OpenAI API | [OpenAI](https://openai.com/blog/gpt-3/) |\n",
+      "| T5 | 11 billion | C4, Wikipedia, BooksCorpus, WebText | May 2020 | Apache 2.0 | [Google AI](https://ai.googleblog.com/2020/02/exploring-transfer-learning-with-t5.html) |\n",
+      "| BERT | 340 million | BooksCorpus, Wikipedia | October 2018 | Apache 2.0 | [Google AI](https://ai.googleblog.com/2018/11/open-sourcing-bert-state-of-art-pre.html) |\n",
+      "| XLNet | 560 million | BooksCorpus, Wikipedia | June 2019 | Apache 2.0 | [Google AI](https://ai.googleblog.com/2019/06/xlnet-generalized-autoregressive.html) |\n",
+      "| RoBERTa | 355 million | BooksCorpus, Wikipedia | October 2019 | Apache 2.0 | [Facebook AI](https://ai.facebook.com/blog/roberta-an-optimized-method-for-pretraining-nlp/) |\n",
+      "| ALBERT | 18 million | BooksCorpus, Wikipedia | October 2019 | Apache 2.0 | [Google AI](https://ai.googleblog.com/2019/12/albert-lite-bert-for-self-supervised.html) |\n",
+      "| ELECTRA | 125 million | BooksCorpus, Wikipedia | March 2020 | Apache 2.0 | [Google AI](https://ai.googleblog.com/2020/03/electra-pre-training-text-encoders-as.html) |\n",
+      "| BART | 400 million | C4, BooksCorpus, Wikipedia | May 2020 | Apache 2.0 | [Facebook AI](https://ai.facebook.com/blog/bart-denoising-sequence-to-sequence-pre-training-for-nlg/) |\n",
+      "| Reformer | 1.6 billion | BooksCorpus, Wikipedia | June 2020 | Apache 2.0 | [Google AI](https://ai.googleblog.com/2020/06/reformer-efficient-transformer.html) |\n",
+      "| Longformer | 1.6 billion | BooksCorpus, Wikipedia | June 2020 | Apache 2.0 | [AI2](https://allenai.org/blog/longformer/) |\n",
+      "| XLM-R | 550 million | BooksCorpus, Wikipedia | June 2020 | Apache 2.0 | [Facebook AI](https://ai.facebook.com/blog/xlm-r-large-scale-cross-lingual-language-model/) |\n",
+      "| CTRL | 1.6 billion | BooksCorpus, Wikipedia | August 2020 | Apache 2.0 | [Salesforce Research](https://blog.einstein.ai/ctrl-a-conditional-transformer-language-model-for-controllable-generation/) |\n",
+      "| TAPAS | 1.6 billion | BooksCorpus, Wikipedia | August 2020 | Apache 2.0 | [Google AI](https://ai.googleblog.com/2020/08/tapas-table-paraphrasing-with-structured.html) |\n",
+      "| MT-DNN | 1.6 billion | BooksCorpus, Wikipedia | August 2020 | Apache 2.0 | [Microsoft Research](https://www.microsoft.com/en-us/research/blog/mt-dnn-a-general-purpose-language-understanding-system/) |\n",
+      "| DeBERTa | 355 million | BooksCorpus, Wikipedia | August 2020 | Apache 2.0 | [Microsoft Research](https://www.microsoft.com/en-us/research/blog/deberta-a-deeper-bidirectional-transformer-for-language-understanding/) |\n",
+      "| SpanBERT | 355 million | BooksCorpus, Wikipedia | August 2020 | Apache 2.0 | [Microsoft Research](https://www.microsoft.com/en-us/research/blog/spanbert-improving-pre-training-by-representing-and-predicting-spans/) |\n",
+      "| UniLM | 1.6 billion | BooksCorpus, Wikipedia | August 2020 | Apache 2.0 | [Microsoft Research](https://www.microsoft.com/en-us/research/blog/unilm-a-unified-language-model-for-natural-language-understanding-and-generation/) |\n",
+      "| ERNIE 2.0 | 1.6 billion | BooksCorpus, Wikipedia | August 2020 | Apache 2.0 | [Baidu Research](https://arxiv.org/abs/1907.12412) |\n",
+      "| Megatron-LM | 8.3 billion | BooksCorpus, Wikipedia | August 2020 | Apache 2.0 | [NVIDIA](https://blogs.nvidia.com/blog/2020/08/20/megatron-language-model/) |\n",
+      "| XLM | 550 million | BooksCorpus, Wikipedia | September 2019 | Apache 2.0 | [Facebook AI](https://ai.facebook.com/blog/xlm-a-massively-multilingual-sentence-embedding-using-pretrained-transformers/) |\n",
+      "| XLM-RoBERTa | 550 million | BooksCorpus, Wikipedia | April 2020 | Apache 2.0 | [Facebook AI](https://ai.facebook.com/blog/xlm-roberta-state-of-the-art-cross-lingual-understanding/) |\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = '''Only respond using markdown with accurate facts from reputable sources.\n",
+    "Create a table of 20 most popular and \n",
+    "recently released Large Language Models \n",
+    "with columns for name, parameters, training data, \n",
+    "release date, license, link to publisher.\n",
+    "'''\n",
+    "completion = openai.Completion.create(prompt=prompt, \n",
+    "                                      model=openai_model,\n",
+    "                                      max_tokens=2000,\n",
+    "                                     temperature=0)\n",
+    "print(completion.choices[0].text.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7aa3ce2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Large language models are a type of artificial intelligence (AI) that use deep learning techniques to process natural language. They are being used in a wide range of applications, from chatbots to summarizing text.\n",
+      "\n",
+      "The concept of large language models was first introduced by Google in 2018 with its BERT (Bidirectional Encoder Representations from Transformers) model. BERT was trained on a large corpus of text to learn the relationships between words and phrases. This enabled it to better understand the context of the text and produce more accurate results.\n",
+      "\n",
+      "Since then, the use of large language models has grown exponentially. According to one industry influencer, Andrew Ng, “Large language models are revolutionizing natural language processing. They are more accurate, faster, and easier to use than traditional language models.”\n",
+      "\n",
+      "Large language models are also being used to generate text. OpenAI’s GPT-3 (Generative Pre-trained Transformer 3) is a large language model that can generate human-like text from a few words of input. It is being used to generate articles, stories, and even code.\n",
+      "\n",
+      "The potential of large language models is immense. As Andrew Ng said, “The ability to generate human-like text is a game-changer for natural language processing. It opens up a whole new world of possibilities for AI applications.”\n",
+      "\n",
+      "Large language models are also being used to improve the accuracy of machine translation. Google’s Translatotron is a large language model that can translate from one language to another without relying on a separate machine translation system. This has the potential to significantly reduce the time and cost associated with traditional machine translation systems.\n",
+      "\n",
+      "The possibilities of large language models are exciting, and the technology is only going to get better. As another industry influencer, Fei-Fei Li, said, “Large language models are going to be the foundation of the next wave of AI applications.”\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = '''As an expert in the field of machine learning\n",
+    "explain, in a narrative style, large language models with \n",
+    "factually accurate information using anecdotes from industry \n",
+    "influencers and thought leaders.'''\n",
+    "completion = openai.Completion.create(prompt=prompt, \n",
+    "                                      model=openai_model,\n",
+    "                                      max_tokens=1000,\n",
+    "                                     temperature=0.5)\n",
+    "print(completion.choices[0].text.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "64d94442",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +138,7 @@
     }
    ],
    "source": [
-    "prompt_start = 'Brainstorm a list of ideas combining the keywords:\\n'\n",
+    "prompt_start = 'List top 10 large language models :\\n'\n",
     "prompt_input = 'physics art city'\n",
     "completion = openai.Completion.create(prompt=prompt_start + prompt_input, \n",
     "                                      model=openai_model,\n",
@@ -452,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
